--- a/video1/index.html
+++ b/video1/index.html
@@ -10,5 +10,10 @@
 		<span>Darth Vader is Luke Skywalker's Father! Noooooooooooo!</span>
     <button>Reveal Spoiler</button>
 	</p>
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js">
+	</script>
+	<script type="text/javascript" src="js/app.js">
+	</script>
+
 </body>
 </html>
